adding all the files

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Welcome</h1>
+    <a href="about.html">about</a>
+    <a href="index.html">home</a>
+    <a href="contact.html">contact</a>
     <img src="image.png" alt="" width="50%">
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro nesciunt quam voluptates dolores repudiandae perferendis veritatis ut, ab optio officia! Officia voluptatum pariatur voluptas ex quo doloribus. Corrupti, obcaecati alias?</p>
 </body>
