--- a/index.html
+++ b/index.html
@@ -4,13 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dinah Josephine |Github </title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        nav {
+            background: #007bff;
+            padding: 0 20px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+        }
+        nav ul {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+        }
+        nav ul li {
+            margin: 0 15px 0 0;
+        }
+        nav ul li:last-child {
+            margin-right: 0;
+        }
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 1.1em;
+            padding: 18px 0;
+            display: block;
+            transition: color 0.2s;
+        }
+        nav a:hover {
+            color: #ffd700;
+        }
+        .container {
+            max-width: 700px;
+            margin: 40px auto;
+            background: #fff;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome</h1>
-    <a href="about.html">about</a>
-    <a href="index.html">home</a>
-    <a href="contact.html">contact</a>
-    <img src="image.png" alt="" width="50%">
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro nesciunt quam voluptates dolores repudiandae perferendis veritatis ut, ab optio officia! Officia voluptatum pariatur voluptas ex quo doloribus. Corrupti, obcaecati alias?</p>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    <div class="container">
+        <h1>Welcome</h1>
+        <img src="image.png" alt="" width="50%">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro nesciunt quam voluptates dolores repudiandae perferendis veritatis ut, ab optio officia! Officia voluptatum pariatur voluptas ex quo doloribus. Corrupti, obcaecati alias?</p>
+    </div>
 </body>
 </html>
