--- a/about.html
+++ b/about.html
@@ -36,5 +36,6 @@
             Welcome to our website! We are passionate about delivering quality content and services to our users. Our team is dedicated to providing helpful resources and a great user experience. Thank you for visiting!
         </p>
     </div>
+    <a href="index.html">Back to Home</a>
 </body>
 </html>
