--- a/contact.html
+++ b/contact.html
@@ -68,5 +68,6 @@
             <button type="submit">Send Message</button>
         </form>
     </div>
+    <a href="index.html">Back to Home</a>
 </body>
 </html>
